correct alignment of mobile menu icon

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,6 +21,7 @@ i {
 
 .social-links {
   padding: 0px;
+  float: left;
 }
 
 #hamburger-menu {
